[gd_scene load_steps=13 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://Mob.tscn" type="PackedScene" id=3]
[ext_resource path="res://fonts/Montserrat-Medium.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://ScoreLabel.gd" type="Script" id=5]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 30, 1, 30 )

[sub_resource type="CubeMesh" id=2]
size = Vector3( 60, 2, 60 )

[sub_resource type="CylinderMesh" id=3]

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 0.898039, 0.54902, 0, 1 )

[sub_resource type="Curve3D" id=5]
_data = {
"points": PoolVector3Array( 0, 0, 0, 0, 0, 0, -13.9419, 0, -6.11012, 0, 0, 0, 0, 0, 0, 14.1314, 0, -7.14138, 0, 0, 0, 0, 0, 0, 13.9022, 0, 16.6922, 0, 0, 0, 0, 0, 0, -14.4002, 0, 16.4631, 0, 0, 0, 0, 0, 0, -13.9419, 0, -6.11012 ),
"tilts": PoolRealArray( 0, 0, 0, 0, 0 )
}

[sub_resource type="DynamicFont" id=6]
size = 22
font_data = ExtResource( 4 )

[sub_resource type="Theme" id=7]
default_font = SubResource( 6 )

[node name="Main" type="Node"]
script = ExtResource( 2 )
mob_scene = ExtResource( 3 )

[node name="Ground" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0 )
collision_layer = 4
collision_mask = 0

[node name="CollisionShape" type="CollisionShape" parent="Ground"]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="Ground"]
mesh = SubResource( 2 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, -0.53267, 0.846323, 0, -0.846323, -0.53267, 0, 21.8138, 0 )
shadow_enabled = true

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="CameraPivot" type="Position3D" parent="."]

[node name="Camera" type="Camera" parent="CameraPivot"]
transform = Transform( 1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 14.1799, 19 )
projection = 1
size = 19.0

[node name="Spatial" type="Spatial" parent="."]

[node name="MeshInstance" type="MeshInstance" parent="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -14, 0, -7 )
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="MeshInstance2" type="MeshInstance" parent="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -14, 0, 17 )
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="MeshInstance3" type="MeshInstance" parent="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 14, 0, 17 )
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="MeshInstance4" type="MeshInstance" parent="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 14, 0, -8 )
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="SpawnPath" type="Path" parent="."]
curve = SubResource( 5 )

[node name="SpawnLocation" type="PathFollow" parent="SpawnPath"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -13.9419, 0, -6.11012 )

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="UserInterface" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 7 )

[node name="ScoreLabel" type="Label" parent="UserInterface"]
margin_left = 18.0
margin_top = 19.0
margin_right = 69.0
margin_bottom = 33.0
custom_colors/font_color = Color( 0.121569, 0.121569, 0.121569, 1 )
text = "Score: 0"
script = ExtResource( 5 )

[node name="Retry" type="ColorRect" parent="UserInterface"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.470588 )

[node name="Label" type="Label" parent="UserInterface/Retry"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -109.5
margin_top = -14.0
margin_right = 109.5
margin_bottom = 14.0
text = "Press Enter to retry."

[connection signal="hit" from="Player" to="." method="_on_Player_hit"]
[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
